* reworked styles for `sortableRef` to be for `ulNotes` which is more correct, now `sortableRef` remains just a functional class for reordering notes * split NewNote and all other Notes in separate `<ul>` lists, and introduced `scrollableContent` that contains those lists - thus there's no more scrolling of the entire page but only of the list section * adjusting `scrollableContent` height and width for desktop and mobile, regarding window height and scrollbar width * proper handling of `scrollableContent` on expanding and collapsing notes

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -86,19 +86,6 @@ label {
     display: inline-block;
 }
 
-.sortableRef {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-.sortableRef li {
-    margin: 0 3px 3px 3px;
-    padding: .4em;
-    border-radius: 3px;
-    min-height: 16px;
-}
-
 .hideMe {
     display:none !important;
 } 
@@ -131,6 +118,25 @@ label {
 
 
 /* Notes elements */
+
+.scrollableContent {
+    width: 100%;
+    overflow-y: scroll;
+    scrollbar-color: rgba(192, 192, 192, .5) transparent;
+}
+
+.ulNotes {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.ulNotes li {
+    margin: 0 3px 3px 3px;
+    padding: .4em;
+    border-radius: 3px;
+    min-height: 16px;
+}
 
 .liNote {
     padding: 5px 10px 12px 15px!important;
